# CodexOfPowerNG

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  NEXUS_DESCRIPTION.md  README.md  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: validate.yml
MCM/Config/SVCollection/: config.json  keybinds.json  settings.ini
PrismaUI/views/codexofpowerng/: AGENTS.md  index.html  input_correction.js  input_shortcuts.js  interop_bridge.js  keycodes.js  lang_ui.js  native_bridge_bootstrap.js  native_state_bridge.js  reward_orbit.js  ui_bootstrap.js  ui_i18n.js  (+7 more)
Scripts/Source/: JArray.psc  JContainers.psc  JDB.psc  JFormDB.psc  JFormMap.psc  JValue.psc  MCM.psc  MCM_ConfigBase.psc  PO3_SKSEFunctions.psc  SVCollectionMCM.psc  SVCollectionManager.psc  SVCollectionPlayerAlias.psc  UIExtensions.psc  UIListMenu.psc
cmake/toolchains/: wsl-clangcl-vcpkg.cmake  wsl-clangcl.cmake
cmake/vcpkg-triplets/: x64-windows-static-md-wsl.cmake
docs/contracts/: build-legacy-expansion-inventory.json  build-legacy-theme-inventory.json  prismaui-js-api.md
docs/plans/: 2026-02-03-codexofpowerng-bootstrap.md  2026-02-03-codexofpowerng-core.md  2026-02-03-main-menu-load-freeze-fix.md  2026-02-04-destroy-on-close-and-dpi-input-fix.md  2026-02-04-inventory-ui-performance.md  2026-02-04-prismaui-toggle-freeze-fix.md  2026-02-04-ui-input-hitbox-and-performance.md  2026-02-04-ui-scale-and-list-ux.md  2026-02-04-ui-virtualized-tables.md  2026-02-05-corpse-explosion-kill-proc.md  2026-02-05-rename-ng-and-git-init.md  2026-02-06-refactor-decoupling-phase1.md  2026-02-06-refactor-decoupling-phase2.md  2026-02-06-refactor-decoupling-phase3.md  2026-02-06-refactor-decoupling-phase4.md  2026-02-12-code-review-fixes.md  2026-02-12-smooth-wheel-scroll-design.md  2026-02-17-lotd-gate-smoke-checklist.md  2026-02-19-full-improvement-plan.md  2026-02-19-full-improvement-report.md  2026-03-08-parallel-improvement-pass1.md  2026-03-08-parallel-improvement-pass2.md  2026-03-08-parallel-improvement-pass3.md  2026-03-08-parallel-improvement-pass4.md  2026-03-08-parallel-improvement-pass5.md  2026-03-08-parallel-improvement-pass6.md  2026-03-08-parallel-improvement-pass7.md  2026-03-08-prerelease-v1.1.0-rc.4.md
docs/releases/: 2026-02-08-nexus-v1.0.3-upload.md  2026-02-23-nexus-v1.0.8-rc.4-upload.md  2026-02-23-nexus-v1.0.8-rc.5-upload.md  AGENTS.md  PATCH_NOTE_RULES.ko.md  v0.1.0.md  v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.0.6-rc.4.md  v1.0.6-rc.5.md  v1.0.6-rc.6.md  v1.0.6.md  v1.0.7-rc.1.md  v1.0.7-rc.10.md  v1.0.7-rc.11.md  v1.0.7-rc.12.md  v1.0.7-rc.13.md  v1.0.7-rc.14.md  v1.0.7-rc.15.md  v1.0.7-rc.16.md  v1.0.7-rc.17.md  v1.0.7-rc.18.md  v1.0.7-rc.19.md  v1.0.7-rc.2.md  v1.0.7-rc.3.md  v1.0.7-rc.4.md  v1.0.7-rc.5.md  v1.0.7-rc.6.md  v1.0.7-rc.7.md  v1.0.7-rc.8.md  v1.0.7-rc.9.md  v1.0.7.md  v1.0.8-rc.1.md  v1.0.8-rc.2.md  v1.0.8-rc.3.md  v1.0.8-rc.4.md  v1.0.8-rc.5.md  v1.0.8-rc.6.md  v1.0.8-rc.7.md  (+11 more)
include/CodexOfPowerNG/: AGENTS.md  BuildEffectRuntime.h  BuildOptionCatalog.h  BuildProgression.h  BuildStateStore.h  BuildTypes.h  Config.h  Constants.h  Events.h  EventsNotifyGate.h  Inventory.h  L10n.h  NotifiedStateStore.h  NotifiedStateStoreOps.h  PrismaUIManager.h  Registration.h  RegistrationFormId.h  RegistrationMaps.h  RegistrationQuestGuard.h  RegistrationRules.h  RegistrationStateStore.h  RegistrationTccGate.h  RegistrationUndoTypes.h  RewardCaps.h  RewardStateStore.h  RewardStateStoreOps.h  Rewards.h  RewardsResync.h  RewardsSyncPolicy.h  RewardsSyncRuntime.h  Serialization.h  SerializationStateStore.h  SerializationStateStoreOps.h  SerializationWriteFlow.h  State.h  TaskScheduler.h  Util.h
scripts/: check_release_zip.sh  package_release.sh  repro_preload_cleanup_check.sh  test.sh
src/: AGENTS.md  BuildEffectRuntime.cpp  BuildOptionCatalog.cpp  BuildProgression.cpp  BuildStateStore.cpp  Config.cpp  Events.cpp  Inventory.cpp  L10n.cpp  NotifiedStateStore.cpp  PrismaUIInternal.h  PrismaUIManager.cpp  PrismaUIPayloads.cpp  PrismaUIPayloads.h  PrismaUIPayloadsBuild.cpp  PrismaUIPayloadsInventory.cpp  PrismaUIPayloadsRewards.cpp  PrismaUIRequestOps.cpp  PrismaUIRequestOps.h  PrismaUIRequestOpsBuild.cpp  PrismaUIRequests.cpp  PrismaUISettings.cpp  PrismaUISettingsInternal.h  PrismaUISettingsPayload.cpp  PrismaUIStatePayload.cpp  PrismaUIToggleActions.cpp  PrismaUITogglePolicy.cpp  PrismaUIViewLifecycle.cpp  PrismaUIViewState.cpp  PrismaUIViewState.h  PrismaUIViewWorkers.cpp  Registration.cpp  RegistrationInternal.cpp  RegistrationInternal.h  RegistrationInternalMaps.cpp  RegistrationInternalTcc.cpp  RegistrationMaps.cpp  RegistrationQuestGuard.cpp  RegistrationQuickListBuilder.cpp  RegistrationQuickListBuilder.h  (+19 more)
tests/: AGENTS.md  assets.test.cjs  build_batch_register_flow.test.cjs  build_effect_runtime.test.cpp  build_legacy_theme_inventory.test.cjs  build_migration_rules.test.cpp  build_native_bridge_module.test.cjs  build_option_catalog_contract.test.cpp  build_request_guards.test.cpp  build_runtime_wiring.test.cjs  build_state_store_ops.test.cpp  build_ui_rendering_module.test.cjs  build_ui_state_module.test.cjs  config_atomic_save.test.cjs  config_settings_layering.test.cjs  config_settings_repair_on_load.test.cjs  events_notify_gate.test.cpp  input_correction_module.test.cjs  input_shortcuts_module.test.cjs  interop_bridge_module.test.cjs  inventory_payload_contract.test.cjs  keycodes.test.cjs  lang_ui.test.cjs  log_flush_level.test.cjs  lotd_gate_warning_ui.test.cjs  native_state_bridge_module.test.cjs  notified_state_store_module.test.cjs  notified_state_store_ops.test.cpp  prismaui_api_reacquire.test.cjs  prismaui_interop_dump_guard.test.cjs  prismaui_preload_cleanup.test.cjs  prismaui_request_mainthread_guard.test.cjs  prismaui_request_refresh_recovery.test.cjs  prismaui_settings_queue_feedback.test.cjs  prismaui_settings_save_rollback.test.cjs  prismaui_worker_generation_guard.test.cjs  quick_register_builder_module.test.cjs  quick_register_cache.test.cjs  quick_register_rules.test.cjs  registration_build_progression.test.cpp  (+29 more)
(+50 files in other folders)
